overflow fixes and versioning

--- a/style2.css
+++ b/style2.css
@@ -70,3 +70,32 @@ body {
     max-width: 80%;
     text-decoration: none;
 }
+
+@media screen and (max-width:930px) {
+  #escrita {
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+}
+
+@media screen and (max-width:1000px) {
+  #escrita {
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+}
+
+@media screen and (max-width:2000px) {
+  #escrita {
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+
+}
+
+@media screen and (max-width:3000px) {
+  #escrita {
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+}
